<resources>
    <string name="app_name">CrowdFund</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="projects">Projects</string>
    <string name="tshs">TShs</string>
    <string name="invest_now">Invest</string>
    <string name="_10">10%</string>
    <string name="annual_return">Annual Return</string>
    <string name="_2">20%</string>
    <string name="membership">Membership+</string>
    <string name="_0_5">0.5%</string>
    <string name="operational">8 Yrs operational</string>
    <string name="price">200,000/-</string>
    <string name="automobiles">AutoMobiles</string>
    <string name="members">20 Members</string>
    <string name="tsh">TSh.</string>
    <string name="sample_desc">sample desc</string>
    <string name="mining">Mining</string>
    <string name="orange_export">Orange Export</string>
    <string name="stationaries">Stationaries</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="crowdfund">Crowd Fund</string>
    <string name="just_a_second">Just a second..</string>
    <string name="accessories">Accessories</string>
    <string name="we_sell_on_your_behalf">We sell on your behalf</string>
    <string name="todo">TODO</string>
    <string name="manager_name">Lunodzo Mwinuka</string>
    <string name="project_manager">Project Manager</string>
    <string name="heading">Heading</string>
    <string name="investors">Investors</string>
    <string name="_500">500</string>
    <string name="a_lot_of_texts_should_ere_a_e_ere_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here">A lot of texts should ere A e ere A lot of texts should be put here A lot of texts should be put here A lot of texts should be put here A lot of texts should be put here A lot of texts should be put here A lot of texts should be put here A lot of texts should be put here A lot of texts should be put here A lot of texts should be put here A lot of texts should be put here</string>
</resources>