<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/imageNew"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/todo"
            android:padding="4dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/imageNew"
            android:layout_toRightOf="@id/imageNew"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorWhite"
            android:text="@string/accessories"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_toEndOf="@id/imageNew"
            android:layout_toRightOf="@id/imageNew"
            android:textColor="@color/colorWhite"
            android:text="@string/we_sell_on_your_behalf"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_round_account_circle_24"
            tools:ignore="VectorDrawableCompat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@id/profile"
            android:layout_toRightOf="@id/profile"
            android:orientation="vertical">

            <TextView
                android:id="@+id/managerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/manager_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/managerDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/project_manager"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1">

        <androidx.cardview.widget.CardView
            android:layout_columnWeight="1"
            android:layout_gravity="center_horizontal"
            tools:ignore="UnusedAttribute">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/heading"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/numberOfInvestor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5sp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_500"
                            android:textSize="40sp" />

                        <TextView
                            android:id="@+id/investorTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/investors"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/currentNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/_500"
                            android:textSize="40sp" />

                        <TextView
                            android:id="@+id/currentTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/investors"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_columnWeight="1"
            android:layout_gravity="center_horizontal"
            tools:ignore="UnusedAttribute">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/summary1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/heading"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/numberOfInvestor1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_500"
                            android:textSize="40sp" />

                        <TextView
                            android:id="@+id/investorTitle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/investors"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/currentNum1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/_500"
                            android:textSize="40sp" />

                        <TextView
                            android:id="@+id/currentTitle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/investors"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>


    <TextView
        android:id="@+id/projectDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/a_lot_of_texts_should_ere_a_e_ere_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here_a_lot_of_texts_should_be_put_here"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />


    <Button
        android:id="@+id/invest"
        android:layout_width="193dp"
        android:layout_height="61dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:background="@drawable/btn_color"
        android:text="@string/invest_now"
        android:textColor="@color/colorWhite" />

</LinearLayout>
